--- a/countries.html
+++ b/countries.html
@@ -10,11 +10,35 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <link rel="stylesheet" type="text/css" href="Main.css">
+    <title>FrontEnd Test</title>
+    <script>
+        document.addEventListener('DOMContentLoaded', function(){
+          document.getElementById('getMessage').onclick = function(){
+      const req = new XMLHttpRequest();
+      req.open("GET",'https://restcountries.com/v3.1/all',true);
+      req.send();
+      req.onload = function(){
+        const json = JSON.parse(req.responseText);
+        document.getElementsByClassName('message')[0].innerHTML = JSON.stringify(json);
+      };
+
+          };
+        });
+      </script>
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+
+    <h1>Countries</h1>
+    <p class="message box">
+        Show list
+    </p>
+    <p>
+        <button id="getMessage">
+            Get Countries
+        </button>
+    </p>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
