--- a/countries.html
+++ b/countries.html
@@ -21,7 +21,13 @@
       req.onload = function(){
         const json = JSON.parse(req.responseText);
         document.getElementsByClassName('message')[0].innerHTML = JSON.stringify(json);
-      };
+        console.log(json[0].name.official);
+        console.log(json[0].capital[0]);
+        console.log(json[0].region);
+        console.log(json[0].languages);
+        console.log(json[0].population);
+        console.log(json[0].flags);
+    };
 
           };
         });
