--- a/countries.html
+++ b/countries.html
@@ -2,52 +2,71 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="Main.css">
     <title>FrontEnd Test</title>
     <script>
-        document.addEventListener('DOMContentLoaded', function(){
-          document.getElementById('getMessage').onclick = function(){
-      const req = new XMLHttpRequest();
-      req.open("GET",'https://restcountries.com/v3.1/all',true);
-      req.send();
-      req.onload = function(){
-        const json = JSON.parse(req.responseText);
-        document.getElementsByClassName('message')[0].innerHTML = JSON.stringify(json);
-        console.log(json[0].name.official);
-        console.log(json[0].capital[0]);
-        console.log(json[0].region);
-        console.log(json[0].languages);
-        console.log(json[0].population);
-        console.log(json[0].flags);
-    };
+        document.addEventListener('DOMContentLoaded', function () {
+            document.getElementById('getMessage').onclick = function () {
+                const req = new XMLHttpRequest();
+                req.open("GET", 'https://restcountries.com/v3.1/all', true);
+                req.send();
+                req.onload = function () {
+                    const json = JSON.parse(req.responseText);
+                    let html = "";
+                    json.forEach(function (val) {
 
-          };
+                        html += "<tr>"
+                        html += "<td>" + val.name.official + "</td>";
+                        html += "<td>" + val.capital + "</td>";
+                        html += "<td>" + val.region + "</td>";
+                        html += "<td>" + val.languages + "</td>";
+                        html += "<td>" + val.population + "</td>";
+
+                        html += "<td><img src = '" + val.flags.png + "' " + "alt='" + val.flags.png + "' style='max-width: 80%;'></td>";
+                        html += "</tr>"
+                        html += "</div><br>";
+
+                    });
+
+                    document.getElementsByClassName('message')[0].innerHTML = html;
+
+                };
+
+            };
         });
-      </script>
+    </script>
 </head>
 
 <body>
 
     <h1>Countries</h1>
-    <p class="message box">
-        Show list
-    </p>
-    <p>
-        <button id="getMessage">
-            Get Countries
-        </button>
-    </p>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <div class='country'>
+        <table class='table table-hover'>
+            <thead>
+                <tr>
+                    <th>Official Name</th>
+                    <th>Capital</th>
+                    <th>Region</th>
+                    <th>Languages</th>
+                    <th>Population</th>
+                </tr>
+            </thead>
+            <tbody class="message box">
+            </tbody>
+        </table>
+    </div>
+    <button id="getMessage">
+        Get Countries
+    </button>
+
+
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
