--- a/countries.html
+++ b/countries.html
@@ -24,7 +24,7 @@
                         html += "<td>" + val.name.official + "</td>";
                         html += "<td>" + val.capital + "</td>";
                         html += "<td>" + val.region + "</td>";
-                        html += "<td>" + val.languages + "</td>";
+                        html += "<td><a href=# data-toggle='modal' data-target='#myModal'>View Languages</a></td>";
                         html += "<td>" + val.population + "</td>";
 
                         html += "<td><img src = '" + val.flags.png + "' " + "alt='" + val.flags.png + "' style='max-width: 80%;'></td>";
@@ -40,6 +40,7 @@
             };
         });
     </script>
+
 </head>
 
 <body>
@@ -47,7 +48,7 @@
     <h1>Countries</h1>
 
     <div class='country'>
-        <table class='table table-hover'>
+        <table class='table table-hover' id="sortTable">
             <thead>
                 <tr>
                     <th>Official Name</th>
@@ -64,6 +65,36 @@
     <button id="getMessage">
         Get Countries
     </button>
+
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+
+                </div>
+                <div class="modal-body" id="id01">
+                    <p>Unordered list</p>
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
+    <script>
+        function languagesModal(arr) {
+            var out = "";
+            var i;
+            for (i = 0; i < arr.length; i++) {
+                out += '<ul>"' + arr.languages + '</ul><br>';
+            }
+            document.getElementById("id01").innerHTML = out;
+        }
+    </script>
 
 
 
